# MaayaTrain

./: .gitignore  LICENSE  MaayaTraining_Guide.md  README.md  akhil_tasks.md  finetune_gemma.py  implementation_plan.md  maayatrain.toml  merge_model.py  pyproject.toml  requirements.txt  research_work.md  simulate_cluster.sh  tasks_phases.md  test_consistency.py  test_generation.py  test_loss_curve.py  test_perplexity.py  two_laptop_guide.md
maayatrain/: __init__.py  app.py  hardware.py  settings.py
maayatrain/architectures/: __init__.py  catalog.py  gpt2.py
maayatrain/comms/: __init__.py  tcp_channel.py  tensor_codec.py  wire_format.py
maayatrain/discovery/: __init__.py  relay_client.py  relay_server.py  roster.py  zeroconf_service.py
maayatrain/monitor/: __init__.py  server.py
maayatrain/monitor/static/: index.html
maayatrain/sample_data/: sample.txt
maayatrain/training/: __init__.py  cluster_info.py  diloco.py  loop.py  lr_schedule.py  orchestrator.py  participant.py  snapshots.py  tokenizer.py
paper/: ACADEMIC_CRITIQUE.md  generate_benchmarks.py  main.tex  main_anonymous.tex  references.bib
tests/: test_async_aggregation.py  test_diloco.py  test_dynamic_sharding.py  test_hardware.py  test_int8_compression.py  test_lr_schedule.py  test_settings.py  test_snapshots.py  test_sota_features.py  test_tensor_codec.py  test_tokenizer.py  test_wire_format.py
